Edit index, images and lasagne recipe

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -8,6 +8,54 @@
 
 <body>
     <h1>Lasagne</h1>
+
+    <p></p>
+
+    <img src="../images/lasagna.jpg">
+
+    <p></p>
+
+    <h2>Description</h2>
+
+      <p>A lasagne is a classic Italian dish composed of layers of pasta, bechamel sauce and meat or tomato sauce. This classic recipe can be altered in many ways - such as this vegetarian version - to create a delicious dinner for all your friends and family!</p>
+
+    <h3>Ingredients</h3>
+
+        <p>For the tomato sauce:</p>
+        <ul>
+            <li>1 onion</li>
+            <li>2 garlic cloves</li>
+            <li>2 red peppers</li>
+            <li>400g chopped tomatoes</li>
+            <li>2 tsp dried mixed herbs</li>
+            <li>75ml red wine</li>
+        </ul>
+
+        <p>For the bechamel sauce:</p>
+        <ul> 
+            <li>50g butter</li>
+            <li>70g plain flour</li>
+            <li>80ml milk</li>
+            <li>150g cheddar (grated)</li>
+        </ul>
+
+        <p>For the lasagne:</p>
+        <ul>
+            <li>Packet of lasagne sheets</li>
+            <li>200g cherry tomatoes (halved)</li>
+            <li>Handful of basil leaves</li>
+        </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Finely chop onion and garlic cloves. Fry with oil for 7-8 minutes until soft.</li>
+            <li>Chop peppers and add to the oil. Fry for another 5-6 minutes until browned.</li>
+            <li>Add chopped tomatoes to the pan alongside the red wine and mixed herbs. Bring to a simmer.</li>
+            <li>In a separate pan, melt the butter. Once melted, add the plain flour and stir to combine. Add milk slowly while stirring and heat gently until combined.</li>
+            <li>Once bechamel sauce has thickened, add cheddar.</li>
+            <li>Pour layer of tomato sauce into lasagne dish. Layer one sheet of pasta on top. Pour layer of bechamel sauce on top, then another layer on pasta. Continue until all sauces have been poured into the dish.</li>
+            <li>Decorate the final layer - which should be bechamel sauce - with chopped cherry tomatoes and shredded basil leaves.</li>
+        </ol>
 </body>
 
 </html>
