Edit lasagne and index, add pizza and salad

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/lasagne.html">Lasagne</a>
+    <ul>
+        <li><a href="./recipes/lasagne.html">Lasagne</a></li>
+
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+
+        <li><a href="./recipes/salad.html">Salad</a></li>
+
+    </ul>
 </body>
 
 </html>
